--- a/src/app/component/campaign/managecampaign/changebudget/changebudget.component.html
+++ b/src/app/component/campaign/managecampaign/changebudget/changebudget.component.html
@@ -15,7 +15,7 @@
             <div class="row budget-row">
                 <div class="col-xs-12 col-md-6">
                 <div class="form-group">
-                    <label>Current Budgetsssssss :</label>
+                    <label>Current Budgetmmmm :</label>
                     <span>INR 500</span> </div>
               </div>
                 <div class="col-xs-12 col-md-6">
